2010-04-05  Thomas Schwinge  <thomas@schwinge.name>

	* sysdeps/pthread/unwind-resume.c: Moved to main tree sysdeps/gnu/.
	* sysdeps/pthread/rt-unwind-resume.c: Likewise.
	* sysdeps/pthread/Makefile: Remove csu section and rt section's
	unwind-resume bits, now in main tree sysdeps/gnu/Makefile instead.

2010-03-23  Luis Machado  <luisgpm@br.ibm.com>

	* pthread_cond_timedwait.c: Add check for
	HAVE_CLOCK_GETTIME_VSYSCALL to use VDSO whenever possible.
	(pthread_cond_timedwait): Use INTERNAL_VSYSCALL instead of
	INTERNAL_SYSCALL.

2010-03-09  Ulrich Drepper  <drepper@redhat.com>

	* pthread_create.c (__pthread_create_2_1): If priorities are incorrect
	and the call fails wake eventually waiting setxid threads.  Don't free
	stack here if we try starting a thread.
	* sysdeps/pthread/createthread.c (do_clone): Only wake setxid waiter
	if the clone call failed.

2010-03-08  Andreas Schwab  <schwab@redhat.com>

	* pthread_create.c (__pthread_create_2_1): Don't set setxid_futex.
	* allocatestack.c (get_cached_stack): Set setxid_futex.
	(allocate_stack): Likewise.

2010-03-05  Andreas Schwab  <schwab@redhat.com>
	    Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (setxid_mark_thread): Delay handling of thread if
	it is creating a thread or it is just being created.
	* pthread_create.c (start_thread): Wake setxid thread if it is
	waiting.
	(__pthread_create_2_1): Initialize setxid_futex.
	* sysdeps/pthread/createthread.c (do_clone): Wake setxid thread if it
	is waiting.

2010-01-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S:
	Fix unwind info.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Likewise.

2010-01-15  Michal Schmidt  <mschmidt@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S:
	Fix pthread_cond_timedwait with requeue-PI.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:
	Fix pthread_cond_wait with requeue-PI.
